test test , voir si git fonctionne (Ali)

--- a/css/style.css
+++ b/css/style.css
@@ -23,3 +23,6 @@
 @import url('_layout/structure.css');
 
 /* /////////////////////////////////////////////////////*/
+
+
+/* test pour voir si git fonctionne */
