Remise Alpha, ajout bouton au header pour reserver.

--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@
 @import url('_composant/nav-close.css');
 @import url('_composant/header-logo.css');
 @import url('_composant/header-image.css');
+@import url('_composant/header-btn.css');
 @import url('_composant/description.css');
 @import url('_composant/pub-ouverture.css');
 @import url('_composant/btns.css');
